--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h1>Employee List</h1>
-<div th:each="employee : ${employees}">"
+<div th:each="employee : ${employees}">
     <h2 th:text="${employee.name}"></h2>
-    <h6 th:inline="text">identified by [[${employee.snn}]]</h6>
+    <h6 th:inline="text">identified by [[${employee.ssn}]]</h6>
     <ul>
         <th:block th:object="${employee.laptop}" >
             <li th:inline="text">Has been assigned a
